--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-countup": "^4.3.3",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.6",
+    "react-isotope": "^1.0.7",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
