--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.5.0",
     "antd": "^4.12.3",
     "axios": "^0.21.1",
     "cra-template-adrinlol": "1.3.4",
+    "emailjs-com": "^2.6.4",
     "i18next": "^19.8.7",
     "i18next-browser-languagedetector": "^6.0.1",
     "i18next-xhr-backend": "^3.2.2",
